# rgbx

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  VERSIONING.md
cmake/: windows.cmake
include/: encoder.h  encoder_helper.h  ezpng.h  legal.h  magic_number.h  program_settings.h  rgb_bits.h  rgbaf.h  rgbx.h
src/: argparse.c  bin_handler.c  decoder.c  encoder.c  encoder_helper.c  ezpng.c  legal.c  magic_number.c  main.c  rgb_bits.c  rgbaf.c  rgbx.c
